fix(my-projects.css): screenshot overflow
- set object-position to center & top (this looks better)

--- a/css/my-projects.css
+++ b/css/my-projects.css
@@ -51,6 +51,7 @@
 
 	& img.__screenshot {
 		object-fit: cover;
+		object-position: center top;
 		width: 100%;
 	}
 
